resourceQuota.yml

apiVersion: apps/v1
kind: Deployment
metadata:
  name: nginx-deployment
  labels:
    app: nginx
  namespace: nginx
spec:
  replicas: 1
  selector:
    matchLabels:
      app: nginx
  template:
    metadata:
      labels:
        app: nginx
    spec:
      containers:
      - name: nginx
        image: nginx
        # Resource Quota
        resources:
          requests:           # Initial Resource
            memory: "200Mi"
            cpu: "100m"
          limits:             # Max Resource Consumption
            memory: "400Mi"
            cpu: "200m"
        ports:
        - containerPort: 80
